@@ -591,6 +591,10 @@ IDLE
 Documentation
 -------------
 
+- Issue #16484: Change the default PYTHONDOCS URL to "https:", and fix the
+  resulting links to use lowercase.  Patch by Sean Rodman, test by Kaushik
+  Nadikuditi.
+
 - Issue #24136: Document the new PEP 448 unpacking syntax of 3.5.
 
 - Issue #26736: Used HTTPS for external links in the documentation if possible.
